This change is done via Online VSCode :o

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <body>
         <h1>This is a Pages Demo</h1>
         Hello my dear friend!
+        <br>
+        <br>
+        here are some changes added with online VSCode.
     </body>
 </html>
